[project]
name = "image-peturbation-class-plots"
version = "0.0.2"

# TODO min,max
dependencies = [
    "lightning==2.3.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "resnet-lightning @ git+https://github.com/lannelin/cifar10-resnet-lightning",
    "lightning-bolts @ git+https://github.com/lannelin/lightning-bolts.git@lightning2",
    "tqdm==4.66.4",
    "beartype==0.18.5",
    "jaxtyping==0.2.30",
    "colorcet==3.1.0",
    "seaborn==0.13.2",
    "matplotlib==3.9.0",
]


[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.isort]
profile = "black"
