[project]
name = "image-peturbation-class-plots"
version = "0.0.2"

# TODO min,max
dependencies = [
    "lightning==2.3.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "resnet-lightning @ git+https://github.com/lannelin/cifar10-resnet-lightning",
    "lightning-bolts @ git+https://github.com/lannelin/lightning-bolts.git@lightning2",
    "tqdm==4.66.4",
    "beartype==0.18.5",
    "jaxtyping==0.2.30",
    "colorcet==3.1.0",
    "seaborn==0.13.2",
    "matplotlib==3.9.0",
    "jsonargparse==4.30.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
force_grid_wrap = 2
